automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -485,7 +485,7 @@
    "source": [
     "import math\n",
     "remove_movies_missing_data=float('nan')\n",
-    "math.isnan(remo)\n",
+    "math.isnan(remove_movies_missing_data)\n",
     "def remove_movies_missing_data(movies):\n",
     "    pass"
    ]
