--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -484,7 +484,7 @@
    "outputs": [],
    "source": [
     "import math\n",
-    "remove_movies_missing_data=float('nan')\n",
+    "x=float('nan')\n",
     "math.isnan(remove_movies_missing_data)\n",
     "def remove_movies_missing_data(movies):\n",
     "    pass"
@@ -508,9 +508,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(parsed_movies) # 1776"
    ]
