automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -484,7 +484,7 @@
    "outputs": [],
    "source": [
     "import math\n",
-    "\n",
+    "math.isnan()\n",
     "def remove_movies_missing_data(movies):\n",
     "    pass"
    ]
