automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -494,7 +494,7 @@
    "source": [
     "import math\n",
     "def remove_movies_missing_data(movies):\n",
-    "    pass math.isnan(remove_movies_missing_data)"
+    "    pass remove_movies_missing_dat"
    ]
   },
   {
